# risu

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fetch_tags.py  fly.toml
src/: main.rs  state.rs  tags.rs  utils.rs
src/commands/: game.rs  mod.rs
src/sources/: mod.rs  safebooru.rs
